# cardscraper

./: .gitignore  README.md  deck.py  file.yaml  model.py  pyproject.toml  requirements.txt  scraping.py
.github/workflows/: ci.yaml  lint.yaml  publish.yaml
src/cardscraper/: __init__.py  __main__.py  config.py  generate.py  package.py  process_file.py  template.py  util.py
src/cardscraper/default/: __init__.py  deck.py  model.py  package.py  scraping.py
tests/: config.yaml  conftest.py  test_cli.py  test_scraping.py  test_simple.py
tests/files/: config.yaml
