[project]
name = 'cardscraper'
dynamic = ['version']
dependencies = [
  'genanki',
  'pyyaml',
  'playwright',
]

[project.scripts]
cardscraper = 'cardscraper.__main__:main'

[project.entry-points.'cardscraper.model']
default = 'cardscraper.default:default_model'
[project.entry-points.'cardscraper.scraping']
default = 'cardscraper.default:default_notes'
[project.entry-points.'cardscraper.deck']
default = 'cardscraper.default:default_deck'
[project.entry-points.'cardscraper.package']
default = 'cardscraper.default:default_package'

[tool.isort]
profile = 'black'
line_length = 79

[tool.hatch.version]
path = 'src/cardscraper/version.py'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
